welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: illegal start of declaration
  setCouleurBrosse(c:Color)
  ^PatternPicture:3: error: illegal start of declaration
  avance()
  ^PatternPicture:4: error: illegal start of declaration
  baisseBrosse()
  ^PatternPicture:5: error: illegal start of declaration
  leveBrosse()
  ^PatternPicture:6: error: illegal start of declaration
  gauche()
  ^PatternPicture:7: error: illegal start of declaration
  avance()
  ^PatternPicture:8: error: illegal start of declaration
  gauche()
  ^PatternPicture:9: error: illegal start of declaration
  baisseBrosse()
  ^PatternPicture:10: error: illegal start of declaration
  leveBrosse()
  ^PatternPicture:11: error: illegal start of declaration
  avance()
  ^PatternPicture:12: error: illegal start of declaration
  gauche()
  ^PatternPicture:13: error: illegal start of declaration
  avance()
  ^PatternPicture:16: error: ')' expected but 'def' found.
def motif2(c:Color) {
^PatternPicture:59: error: illegal start of simple expression
}
^